<resources>
    <string name="app_name">MovieReview</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_background">login background</string>
    <string name="search_movie">Search Movie...</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="trending_now">Trending Now</string>
    <string name="explorer">Explorer</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="textview">TextView</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="_0">0</string>
    <string name="summary">Summary</string>
    <string name="release_date">Release Date:</string>
    <string name="profile">Profile</string>
    <string name="mobile">Mobile</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_results">Search results</string>
</resources>