<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    android:background="@color/main_color"
    tools:context="com.example.moviereview.view.RegisterActivity">

    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:orientation="vertical"
                    android:layout_weight="3">



                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:layout_marginTop="40dp"/>

                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:text="@string/register"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <com.google.android.material.textfield.TextInputLayout

                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:inputType="text"
                                android:maxLines="1"
                                android:hint="@string/name"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:inputType="text"
                                android:maxLines="1"
                                android:hint="@string/mobile_number"/>
                        </com.google.android.material.textfield.TextInputLayout
                            >

                        <com.google.android.material.textfield.TextInputLayout

                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout
                            >

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout
                            >

                        <Button
                            android:layout_marginTop="20dp"
                            style="@style/loginButton"
                            android:layout_gravity="center"
                            android:text="@string/register"
                            android:id="@+id/register"
                            />

                        <TextView
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/signup_login_hint"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="viewLoginClicked"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

